try to fix logo on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -802,7 +802,6 @@ video {
   border-radius: 0px 0px 7px 7px;
 }
 .call-to-action .row > div {
-  margin-top: -47%;
   position: relative;
   text-align:left;
   z-index: 2;
@@ -2392,6 +2391,9 @@ padding: 100px 10px 10px 10px;
   footer .logo {
   width: 40%;
   }
+  .call-to-action .row > div {
+    margin-top: -57%;
+  }
 }
 @media (max-width: 1199px) {
   
@@ -2439,6 +2441,9 @@ padding: 100px 10px 10px 10px;
   }
   footer .logo {
   width: 40%;
+  }
+  .call-to-action .row > div {
+    margin-top: -57%;
   }
 }
 @media (max-width: 1090px) {
@@ -2494,6 +2499,9 @@ padding: 100px 10px 10px 10px;
   }
   footer .logo {
   width: 40%;
+  }
+  .call-to-action .row > div {
+    margin-top: -57%;
   }
 }
 @media (max-width: 991px) {
@@ -2695,6 +2703,9 @@ padding: 100px 10px 10px 10px;
   footer .logo {
   width: 40%;
   }
+  .call-to-action .row > div {
+    margin-top: -57%;
+  }
 }
 @media (max-width: 768px) { 
   .homepage2 section.call-to-action h3 {
@@ -2830,6 +2841,9 @@ padding: 100px 10px 10px 10px;
   }
   footer .logo {
   width: 40%;
+  }
+  .call-to-action .row > div {
+    margin-top: -57%;
   }
 }
 @media (max-width: 680px) {  
